--- a/assignment1/src/main/resources/templates/index.html
+++ b/assignment1/src/main/resources/templates/index.html
@@ -13,10 +13,9 @@
         <th >FullName</th>
         <th >Gender</th>
     </tr>
-<tr th:each="message : ${artist}">
-    <td th:text="${message.id}">1</td>
-       <td th:text="${message.FullName}">Text ...</td>
-   
+    <tr th:each="message : ${artist}">
+    <td th:text="${message.id}">Text ...</td>
+    <td ><a href="" th:href="@{'/artist/' + ${message.id}}" th:text="${message.FullName}"></a></td>
     <td th:text="${message.gender}">Text ...</td>
 </tr>
 </table>
