Did the artwork List Page with links to artwork

--- a/assignment1/src/main/resources/templates/artist.html
+++ b/assignment1/src/main/resources/templates/artist.html
@@ -30,7 +30,7 @@
     <p>------------------- <span th:text="${iterationStatus.count}">1</span> ---------------------------</p>
     	image?
     	<p>Artwork id: <span th:text="${message3.acno}">Text ...</span></p>
-    	<p>Artwork Title: <span th:text="${message3.title}">Text ...</span></p>
+    	<p>Artwork Title: <a href="" th:href="@{'/artwork/' + ${message3.acno}}" th:text="${message3.title}"><span th:text="${message3.title}">Text ...</span></a></p>
     	<p>Artwork Movements: <span th:text="${message3.movements}">Text ...</span></p>
     </div>
     
