--- a/assignment1/src/main/resources/templates/error.html
+++ b/assignment1/src/main/resources/templates/error.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>Error</title>
+<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <p th:text="${errorMessage}">java.lang.NullPointerException</p>
