--- a/assignment1/src/main/resources/templates/login.html
+++ b/assignment1/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 
 <head>
 <title>Login</title>
+<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <form name="form" th:action="@{/login}" method="post"> 
