--- a/assignment1/src/main/resources/templates/singleArtwork.html
+++ b/assignment1/src/main/resources/templates/singleArtwork.html
@@ -4,7 +4,8 @@
 <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-
+<div class="container">
+    <div class="row row-centered">
 
     <p>Id: <span th:text="${singleArtwork.acno}">Text ...</span></p>
     <p>Title: <span th:text="${singleArtwork.title}">Text ...</span></p>
@@ -22,7 +23,8 @@
 	</tr>
     </table>
     
-    
+    </div>
+    </div>
 
 </body>
 
