--- a/assignment1/src/main/resources/templates/index.html
+++ b/assignment1/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
