--- a/assignment1/src/main/resources/templates/login.html
+++ b/assignment1/src/main/resources/templates/login.html
@@ -1,35 +1,21 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-<title>Login</title>
-<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<form name="form" th:action="@{/login}" method="post"> 
-<fieldset>
-  <h1>Login </h1>
-  <div th:if="${param.error}" class="alert alert-error">    
-                    Invalid username or password.
-                </div>
-     <div th:if="${param.logout}" clas"src/main/resources/application.properties"s="alert alert-success"> 
-                    You have been logged out.
-                </div>
-                
-    
-      <label for="username">Username</label>:
-      <input type="text" id="username" name="username"/> <br />
-      <label for="password">Password</label>:
-      <input type="password" id="password" name="password" /> <br />
-      <div class="form-actions">
-                    <button type="submit" class="btn">Log in</button>
-                </div>
-    
-    </fieldset>
-	</form>
-
-</body>
-
-
-
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+    <head>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <title>Spring Security Example </title>
+    </head>
+    <body>
+        <div th:if="${param.error}">
+            Invalid username and password.
+        </div>
+        <div th:if="${param.logout}">
+            You have been logged out.
+        </div>
+        <form th:action="@{/login}" method="post">
+            <div><label> User Name : <input type="text" name="username"/> </label></div>
+            <div><label> Password: <input type="password" name="password"/> </label></div>
+            <div><input type="submit" value="Sign In"/></div>
+        </form>
+    </body>
 </html>
