Inserting username into database

--- a/assignment1/src/main/resources/templates/login.html
+++ b/assignment1/src/main/resources/templates/login.html
@@ -6,6 +6,7 @@
         <title>Spring Security Example </title>
     </head>
     <body>
+      <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <div th:if="${param.error}">
             Invalid username and password.
         </div>
