Added Logout button to each page.

--- a/assignment1/src/main/resources/templates/art.html
+++ b/assignment1/src/main/resources/templates/art.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Logout"></input>
+</form>
 
 <table class="table table-striped" >
     <tr>
