--- a/assignment1/src/main/resources/templates/index.html
+++ b/assignment1/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Logout"></input>
+</form>
+
 <a href="/artist/" ><h1>Artists</h1></a>
 
 <a href="/artwork/" ><h1>Artworks</h1></a>
