--- a/assignment1/src/main/resources/templates/index.html
+++ b/assignment1/src/main/resources/templates/index.html
@@ -1,21 +1,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+<link href="/css/nav.css" rel="stylesheet" type="text/css"/>
 <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+
 </head>
 <body>
 
-<form th:action="@{/logout}" method="post">
+<form  th:action="@{/logout}" method="post">
     <input type="submit" value="Logout"></input>
 </form>
 
-<a href="/artist/" ><h1>Artists</h1></a>
-
-<a href="/artwork/" ><h1>Artworks</h1></a>
+<ul>
+  <li><a href="/" ><h1>Home</h1></a></li>
+  <li><a href="/artist/" ><h1>Artists</h1></a></li>
+  <li><a href="/artwork/" ><h1>Artworks</h1></a></li>
+</ul>
 
 </body>
-
-
-
-
 </html>
