--- a/assignment1/src/main/resources/templates/art.html
+++ b/assignment1/src/main/resources/templates/art.html
@@ -5,6 +5,27 @@
 <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Tate gallery</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li class="active"><a href="/artist/" >Artists</a>
+</li>
+        <li><a href="/artwork/" >Artworks</a></li> 
+        			<li sec:authorize="hasRole('user')">
+     <a href="/login?logout" ><span sec:authentication="name">Bob</span>: Logout</a>
+</li>
+<li sec:authorize="!hasRole('user')">
+   <a href="/login" >Login</a>
+</li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Logout"></input>
@@ -15,7 +36,6 @@
   <li><a href="/artist/" ><h1>Artists</h1></a></li>
   <li><a href="/artwork/" ><h1>Artworks</h1></a></li>
 </ul>
-
 <table class="table table-striped" >
     <tr>
   
