--- a/assignment1/src/main/resources/templates/art.html
+++ b/assignment1/src/main/resources/templates/art.html
@@ -17,7 +17,7 @@
 </li>
         <li><a href="/artwork/" >Artworks</a></li> 
         			<li sec:authorize="hasRole('user')">
-            <form th:action="@{/logout}" method="post">
+            <form th:action="@{/logout}" method="post" style="display: inline;">
             <input type="submit" value="Sign Out" style="background:rgba(0,0,0,0);border:none;color: #777;padding-top: 15px;
     padding-bottom: 15px;"/>
         </form>
