--- a/assignment1/src/main/resources/templates/index.html
+++ b/assignment1/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
      
 	
 			<li sec:authorize="hasRole('user')">
-               <form th:action="@{/logout}" method="post">
+               <form th:action="@{/logout}" method="post" style="display: inline;">
             <input type="submit" value="Sign Out" style="background:rgba(0,0,0,0);border:none;color: #777;padding-top: 15px;
     padding-bottom: 15px;"/>
         </form>
