--- a/assignment1/src/main/resources/templates/login.html
+++ b/assignment1/src/main/resources/templates/login.html
@@ -30,16 +30,22 @@
     </div>
   </div>
 </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
         <div th:if="${param.error}">
             Invalid username and password.
         </div>
         <div th:if="${param.logout}">
             You have been logged out.
         </div>
-        <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+        <form th:action="@{/login}" method="post" class="form-signin">
+            <div><label style="width: 100%;" > User Name : <input type="text" name="username" class="form-control"/> </label></div>
+            <div><label style="width: 100%;" > Password: <input type="password" name="password" class="form-control"/> </label></div>
+            <div><button class="btn btn-lg btn-primary btn-block" type="submit" >Sign In</button></div>
         </form>
+        </div>
+        </div>
+        </div>
     </body>
 </html>
