--- a/assignment1/src/main/resources/templates/artwork.html
+++ b/assignment1/src/main/resources/templates/artwork.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Tate gallery</a>
+      <a class="navbar-brand" href="/">Tate Gallery</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
