added custom.css,add responsive class around table and added dotted border in artist.html

--- a/assignment1/src/main/resources/templates/artist.html
+++ b/assignment1/src/main/resources/templates/artist.html
@@ -58,7 +58,7 @@
 
     <br></br>
     
-    
+     <div class= "table-responsive table-bordered">
     <p>Artworks:</p>
     
     <div th:each="message3, iterationStatus : ${singleArtist.artworks}">
@@ -68,7 +68,7 @@
     	<p>Artwork Title: <a href="" th:href="@{'/artwork/' + ${message3.acno}}" th:text="${message3.title}"><span th:text="${message3.title}">Text ...</span></a></p>
     	<p>Artwork Movements: <span th:text="${message3.movements}">Text ...</span></p>
     </div>
-    
+    </div>
 </div>
 </div>
 </body>
