--- a/assignment1/src/main/resources/templates/artwork.html
+++ b/assignment1/src/main/resources/templates/artwork.html
@@ -34,7 +34,7 @@
 
 
 
-
+<div class ="table-responsive">
 <table class="table table-striped">
     <tr>
   
@@ -48,6 +48,7 @@
     <td th:text="${message.artistName}">Text ...</td>
 </tr>
 </table>
+</div>
 
 </body>
 
