--- a/assignment1/src/main/resources/templates/art.html
+++ b/assignment1/src/main/resources/templates/art.html
@@ -32,7 +32,7 @@
 
 
 
-
+<div class="table-responsive">
 <table class="table table-striped" >
     <tr>
   
@@ -48,7 +48,7 @@
 </table>
 
 </body>
-
+</div>
 
 
 
