--- a/assignment1/src/main/resources/templates/singleArtwork.html
+++ b/assignment1/src/main/resources/templates/singleArtwork.html
@@ -41,6 +41,7 @@
     <p>Title: <span th:text="${singleArtwork.title}">Text ...</span></p>
     <p>Medium: <span th:text="${singleArtwork.medium}">Text ...</span></p>
     <p>Artist: <a href="" th:href="@{'/artist/' + ${singleArtwork.artist.getId()}}" th:text="${singleArtwork.artist.getFullName()}"><span th:text="${singleArtwork.artist.getFullName()}">Text ...</span></a></p>
+    <p>Artist Gender: <span th:text="${singleArtwork.artist.gender}">Text ...</span></p>
     
     <p>Movements: </p>
     <table border="1">
