--- a/assignment1/src/main/resources/templates/index.html
+++ b/assignment1/src/main/resources/templates/index.html
@@ -14,9 +14,9 @@
     <div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="/artist/" >Artists</a>
-</li>
+        <li><a href="/artist/" >Artists</a></li>
         <li><a href="/artwork/" >Artworks</a></li> 
+        <li><a href="/flickr/" >Flickr</a></li> 
      
 	
 			<li sec:authorize="hasRole('user')">
