--- a/assignment1/src/main/resources/templates/login.html
+++ b/assignment1/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
     <head>
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     
-        <title>Spring Security Example </title>
+        <title>Login</title>
     </head>
     <body>
     <nav class="navbar navbar-default">
@@ -14,9 +14,10 @@
     <div>
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <li ><a href="/artist/" >Artists</a>
-</li>
+        <li ><a href="/artist/" >Artists</a></li>
         <li><a href="/artwork/" >Artworks</a></li> 
+        <li><a href="/flickr/" >Flickr</a></li> 
+        
         			<li class="active" sec:authorize="hasRole('user')">
                <form th:action="@{/logout}" method="post" style="display: inline;">
             <input type="submit" value="Sign Out" style="background:rgba(0,0,0,0);border:none;color: #777;padding-top: 15px;
